--- a/app/src/main/res/layout/fragment_album_detail.xml
+++ b/app/src/main/res/layout/fragment_album_detail.xml
@@ -76,7 +76,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="60dp"
+                    android:layout_marginEnd="80dp"
                     android:ellipsize="end"
                     android:singleLine="true"
                     android:text="@string/default_album_name"
@@ -94,7 +94,7 @@
                     android:text="@string/default_artist_name"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textSize="14sp"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/album_details_name"
                     app:layout_constraintStart_toStartOf="@+id/album_details_name"
                     app:layout_constraintTop_toBottomOf="@+id/album_details_name" />
 
@@ -155,7 +155,7 @@
                         android:id="@+id/album_details_release_year"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/default_year" />
+                        android:text="@string/n_a" />
 
                 </LinearLayout>
 
