--- a/app/src/main/res/layout/item_overview_video_big.xml
+++ b/app/src/main/res/layout/item_overview_video_big.xml
@@ -33,7 +33,7 @@
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
                 android:foreground="?android:attr/selectableItemBackground"
-                android:scaleType="fitCenter"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_video_24dp"
                 app:shapeAppearanceOverlay="@style/roundedCornerImageView" />
 
