--- a/app/src/main/res/menu/overview_options_menu.xml
+++ b/app/src/main/res/menu/overview_options_menu.xml
@@ -6,5 +6,5 @@
         android:title="@string/clear_history"
         android:icon="@drawable/ic_clear_history_24dp"
         app:iconTint="@color/cyan"
-        app:showAsAction="always" />
+        app:showAsAction="never" />
 </menu>
