--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -80,6 +80,16 @@
             app:argType="long" />
     </fragment>
     <fragment
+        android:id="@+id/favouriteFragment"
+        android:name="com.example.mediaplayerapp.ui.special_playlists.FavouriteFragment"
+        android:label="fragment_favourite"
+        tools:layout="@layout/fragment_favourite" />
+    <fragment
+        android:id="@+id/mediaQueueFragment"
+        android:name="com.example.mediaplayerapp.ui.special_playlists.MediaQueueFragment"
+        android:label="fragment_media_queue"
+        tools:layout="@layout/fragment_media_queue" />
+    <fragment
         android:id="@+id/navigation_settings"
         android:name="com.example.mediaplayerapp.ui.settings.SettingsFragment"
         android:label="SettingFragment" />
@@ -94,5 +104,12 @@
         <action
             android:id="@+id/action_navigation_more_to_navigation_playlist"
             app:destination="@id/navigation_playlist" />
+        <action
+            android:id="@+id/action_navigation_more_to_mediaQueueFragment"
+            app:destination="@id/mediaQueueFragment" />
+        <action
+            android:id="@+id/action_navigation_more_to_favouriteFragment"
+            app:destination="@id/favouriteFragment" />
     </fragment>
+
 </navigation>
