--- a/app/src/main/res/layout/item_media_queue_grid.xml
+++ b/app/src/main/res/layout/item_media_queue_grid.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:id="@+id/layout_item_queue_grid"
+    android:id="@+id/layout_item_queue"
     android:background="?attr/selectableItemBackground"
     android:padding="10dp">
 
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/img_thumb_queue_grid"
+                android:id="@+id/img_thumb_queue"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_centerInParent="true"
@@ -53,7 +53,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tv_queue_name_grid"
+                    android:id="@+id/tv_queue_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
@@ -64,7 +64,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/tv_duration_queue_grid"
+                    android:id="@+id/tv_duration_queue"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/video_duration_placeholder"
@@ -73,15 +73,15 @@
 
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/imgBtn_queue_delete_grid"
+            <ImageButton
+                android:id="@+id/imgBtn_queue_delete"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="-2"
                 android:clickable="true"
                 android:contentDescription="@string/description_options_icon"
                 android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
+                android:background="?attr/selectableItemBackground"
                 android:src="@drawable/ic_delete_24dp" />
 
         </LinearLayout>
