--- a/app/src/main/res/layout/fragment_video_library.xml
+++ b/app/src/main/res/layout/fragment_video_library.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="@string/all_videos_textView"
+        android:textColor="#474646"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
