--- a/app/src/main/res/layout/song_detail.xml
+++ b/app/src/main/res/layout/song_detail.xml
@@ -33,7 +33,7 @@
         android:id="@+id/song_info_artist"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="20dp"
         android:gravity="left"
         android:textSize="14sp"
@@ -57,12 +57,11 @@
         android:id="@+id/song_info_album"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
         android:layout_marginTop="20dp"
         android:gravity="left"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/song_info_artist"
         app:layout_constraintTop_toBottomOf="@+id/song_info_artist"
         tools:ignore="RtlHardcoded" />
 
@@ -81,13 +80,12 @@
         android:id="@+id/song_info_genre"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
         android:layout_marginTop="20dp"
         android:gravity="left"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/song_info_album"
         app:layout_constraintTop_toBottomOf="@+id/song_info_album"
         tools:ignore="RtlHardcoded" />
 
@@ -106,12 +104,11 @@
         android:id="@+id/song_info_duration"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
         android:layout_marginTop="20dp"
         android:gravity="left"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/song_info_artist"
         app:layout_constraintTop_toBottomOf="@+id/song_info_genre"
         tools:ignore="RtlHardcoded" />
 
@@ -130,12 +127,11 @@
         android:id="@+id/song_info_timeadded"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
         android:layout_marginTop="20dp"
         android:gravity="left"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/song_info_artist"
         app:layout_constraintTop_toBottomOf="@+id/song_info_duration"
         tools:ignore="RtlHardcoded" />
 </androidx.constraintlayout.widget.ConstraintLayout>
