Make song and video info unified

--- a/app/src/main/res/layout/dialog_video_info.xml
+++ b/app/src/main/res/layout/dialog_video_info.xml
@@ -33,7 +33,7 @@
         android:id="@+id/dialog_video_info_video_path_textview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="20dp"
         android:gravity="left"
         android:text="@string/dialog_video_info_path_textview"
@@ -58,7 +58,7 @@
         android:id="@+id/dialog_video_info_video_size_textview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="20dp"
         android:gravity="left"
         android:text="@string/dialog_video_info_size_textview"
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:gravity="center"
-        android:text="@string/dialog_video_info_date_textview"
+        android:text="@string/time_added2"
         android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/dialog_video_info_video_date_taken_textview"
         app:layout_constraintStart_toStartOf="parent" />
@@ -83,7 +83,7 @@
         android:id="@+id/dialog_video_info_video_date_taken_textview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="20dp"
         android:gravity="left"
         android:text="@string/dialog_video_info_date_textview"
@@ -109,7 +109,7 @@
         android:id="@+id/dialog_video_info_video_resolution_textview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="20dp"
         android:gravity="left"
         android:text="@string/dialog_video_info_resolution_textview"
@@ -125,7 +125,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:gravity="center"
-        android:text="@string/dialog_video_info_length_textview"
+        android:text="@string/duration2"
         android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/dialog_video_info_video_length_textview"
         app:layout_constraintStart_toStartOf="parent" />
@@ -134,7 +134,7 @@
         android:id="@+id/dialog_video_info_video_length_textview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="20dp"
         android:gravity="left"
         android:text="@string/dialog_video_info_length_textview"
