--- a/app/src/main/res/layout/dialog_playlist_item_properties.xml
+++ b/app/src/main/res/layout/dialog_playlist_item_properties.xml
@@ -22,8 +22,8 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="@string/title"
-            android:textSize="20sp" />
+            android:text="@string/file_name"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/playlist_item_properties_dialog_title"
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:text="@string/app_name"
-            android:textSize="20sp" />
+            android:textSize="14sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -43,8 +43,8 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="@string/duration"
-            android:textSize="20sp" />
+            android:text="@string/duration2"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/playlist_item_properties_dialog_duration"
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:text="@string/app_name"
-            android:textSize="20sp" />
+            android:textSize="14sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -64,8 +64,8 @@
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="@string/location"
-            android:textSize="20sp" />
+            android:text="@string/dialog_video_info_path_textview"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/playlist_item_properties_dialog_location"
@@ -73,7 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:text="@string/app_name"
-            android:textSize="20sp" />
+            android:textSize="14sp" />
 
     </LinearLayout>
 </LinearLayout>
